objects/Prueba_1__c.object
<CustomObject>
    <fields>
        <fullName>CampoPicklist1234__c</fullName>
        <description>8888HELL8888</description>
        <inlineHelpText>1234PAMPAM</inlineHelpText>
        <label>CampoPicklist1234</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Letra1</fullName>
                    <label>Letra1-Modify</label>
                </value>
                <value>
                    <fullName>Letra2</fullName>
                </value>
                <value>
                    <fullName>Letra3</fullName>
                </value>
                <value>
                    <fullName>Letra4</fullName>
                    <label>Letra4top</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campo_Profile__c</fullName>
        <label>Campo_Profile</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOVERyBORRAR__c</fullName>
        <label>MOVERyBORRAR</label>
        <length>12</length>
        <type>Text</type>
    </fields>
</CustomObject>